cluster-go/citrix-vdi/udn-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: citrix-vdi-udn
  labels:
    k8s.ovn.org/primary-user-defined-network: ''
