cluster-go/citrix-vdi/http-win-iso-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-win-iso
  namespace: citrix-vdi-udn
  labels:
    app: http-win-iso
spec:
  selector:
    app: http-win-iso
  ports:
    - name: 8000-tcp
      port: 8000
      protocol: TCP
      targetPort: 8000
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
