cluster-go/citrix-vdi/http-win-iso-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  name: http-win-iso
  namespace: citrix-vdi-udn
spec:
  path: /
  port:
    targetPort: 8000-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: http-win-iso
    weight: 100
  wildcardPolicy: None
